--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=ScheduleManager
 
 
-spring.datasource.url=jdbc:mysql://localhost:3306/ScheduleDatabas?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://db:3306/ScheduleDatabas?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=Villan9327
+spring.datasource.password=Exister.97
 
 
 spring.jpa.hibernate.ddl-auto=update
