--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,6 @@
-spring.application.name=ScheduleManager
-
-
-spring.datasource.url=jdbc:mysql://db:3306/ScheduleDatabas?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=Exister.97
-
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
@@ -17,3 +13,4 @@ spring.thymeleaf.suffix=.html
 spring.thymeleaf.mode=HTML
 
 logging.level.org.springframework.security=DEBUG
+
