--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,8 @@ spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.format_sql=false
 
 server.port=8080
 
@@ -13,4 +13,6 @@ spring.thymeleaf.suffix=.html
 spring.thymeleaf.mode=HTML
 
 logging.level.org.springframework.security=DEBUG
+
+
 
